feat: implements HATEOAS