@@ -1,14 +1,24 @@
 package br.com.avanade.dio.apis.advice;
 
-import br.com.avanade.dio.apis.exception.ApplicationException;
+import java.util.List;
+import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ProblemDetail;
 import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Component;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import br.com.avanade.dio.apis.dto.FieldErrorDTO;
+import br.com.avanade.dio.apis.exception.ApplicationException;
+
+
+@Component
 @RestControllerAdvice
 public class ControllerAdvice {
 
@@ -17,14 +27,20 @@ public class ControllerAdvice {
 
 
     @ExceptionHandler(ApplicationException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ResponseEntity<ProblemDetail> nada() {
         return null;
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<?> fieldErrorHandler(MethodArgumentNotValidException ex) {
-    	var errors = ex.getFieldErrors().stream().map(fieldError -> new FieldErrorDto(fieldError.getField().fieldError.getDefaultMessage())).toList();
-        return ResponseEntity.badRequest().body(errors);
-    }
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ResponseEntity<List<FieldErrorDTO>> handleValidationExceptions(MethodArgumentNotValidException ex) {
+        List<FieldErrorDTO> fieldErrors = ex.getBindingResult()
+                .getFieldErrors()
+                .stream()
+                .map(fieldError -> new FieldErrorDTO(fieldError.getField(), fieldError.getDefaultMessage()))
+                .collect(Collectors.toList());
 
+        return ResponseEntity.badRequest().body(fieldErrors);
+    }
 }
